more font fixes for readability in Thai

--- a/styles/game.css
+++ b/styles/game.css
@@ -6,7 +6,7 @@
 }
 
 
-@font-face{font-family: Kanit-Regular; src: url('../style/font/Kanit-Regular.ttf');}
+@font-face{font-family: Kanit-Regular; src: url('../anxiety/style/font/Kanit-Regular.ttf');}
 
 body {
 	width: 100%;
